--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </a-camera>
         </a-entity>
         <a-plane height="1000" width="1000" color="green" rotation="-90 0 0"></a-plane>
-        <a-sphere onclick="addBalloon()" position="0 2 -5" radius="0.2"></a-sphere>
+        <a-box color="tomato" onclick="addBalloon()" position="0 2 -5" width="0.2" height="0.2"></a-box>
         <!--The Up House-->
         <a-entity id="houseBalloons">
             <a-entity obj-model="obj: #house-obj; mtl: #house-mtl" position="6 0 -10"></a-entity>
