add text and balloon counter

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 <a-cursor></a-cursor>
             </a-camera>
         </a-entity>
+        <a-text value="Click on the red box to add balloons!" position="-4 5 -5"></a-text>
+        <a-text id="counter" value="Number of balloons: 0" position="-4 4 -5"></a-text>
         <a-plane height="1000" width="1000" color="green" rotation="-90 0 0"></a-plane>
         <a-box color="tomato" onclick="addBalloon()" position="0 2 -5" width="0.2" height="0.2"></a-box>
         <!--The Up House-->
